@@ -3,7 +3,7 @@ NAME
     encryption, decryption, signatures, password hashing and more
 
 VERSION
-    version 1.0.6.0
+    version 1.0.6.1
 
 SYNOPSIS
         use Crypt::NaCl::Sodium qw( :utils );
